--- a/css/creative.css
+++ b/css/creative.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Createive v4.0.0-alpha (http://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
- */
 html,
 body {
   width: 100%;
@@ -41,7 +36,7 @@ p {
   margin-bottom: 20px; }
 
 .bg-primary {
-  background-color: #F05F40 !important; }
+  background-color: #FFF !important; }
 
 .bg-dark {
   color: white;
@@ -256,7 +251,7 @@ header.masthead {
     margin: 0 auto 20px; }
 
 .text-primary {
-  color: #F05F40 !important; }
+  color: #111 !important; }
 
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -300,9 +295,9 @@ header.masthead {
     background-color: #222222; }
 
 .btn-primary {
-  color: white;
-  border-color: #F05F40;
-  background-color: #F05F40; }
+  color: #111;
+  border-color: #FFF;
+  background-color: #FFF; }
   .btn-primary:focus, .btn-primary.focus {
     color: white;
     border-color: #a4270d;
@@ -345,3 +340,21 @@ header.masthead {
 
 .btn-xl {
   padding: 15px 30px; }
+
+.section-heading {
+  font-size: 32px;
+  letter-spacing: -1.5px;
+  line-height: 42px; }
+
+.subheading {
+  font-style: italic; }
+
+.feature {
+  text-align: center; }
+
+.feature img {
+  margin: 0 auto; }
+
+.project-link {
+  text-align: center;
+  margin: 10px; }
